--- a/directbak.yaml
+++ b/directbak.yaml
@@ -165,6 +165,7 @@ payload:
   - '+.021networks.com'
   - '+.021phone.com'
   - '+.021ren.com'
+  - '+.021senxi.com'
   - '+.021sports.com'
   - '+.021tk.com'
   - '+.021yongzhuo.com'
@@ -4849,7 +4850,6 @@ payload:
   - '+.52zhushan.com'
   - '+.52zixue.com'
   - '+.52zuji.net'
-  - '+.52zwxs.com'
   - '+.52zx.cc'
   - '+.52zx.net'
   - '+.52zxw.com'
@@ -4899,6 +4899,7 @@ payload:
   - '+.53zw.net'
   - '+.54.com'
   - '+.54114.com'
+  - '+.542i.com'
   - '+.5433.com'
   - '+.545c.com'
   - '+.5460.net'
@@ -6173,6 +6174,7 @@ payload:
   - '+.7ccj.com'
   - '+.7cen.com'
   - '+.7chacha.com'
+  - '+.7chajiu.com'
   - '+.7cloud.shop'
   - '+.7cmz.com'
   - '+.7cname.com'
@@ -10836,7 +10838,6 @@ payload:
   - '+.bdsye.com'
   - '+.bdtic.com'
   - '+.bdtjs.org'
-  - '+.bdtkba.com'
   - '+.bdtm.net'
   - '+.bdurl.net'
   - '+.bdwater.com'
@@ -13639,6 +13640,7 @@ payload:
   - '+.cdn-hotels.com'
   - '+.cdn-ng.net'
   - '+.cdn-speed.com'
+  - '+.cdn-static.farfetch-contents.com'
   - '+.cdn-v.com'
   - '+.cdn.fun'
   - '+.cdn.marketplaceimages.windowsphone.com'
@@ -17043,6 +17045,7 @@ payload:
   - '+.cpihualai.com'
   - '+.cpitsh.org'
   - '+.cpjltx.com'
+  - '+.cpk01.com'
   - '+.cplchain.com'
   - '+.cpo.xyz'
   - '+.cpo2o.com'
@@ -18365,6 +18368,7 @@ payload:
   - '+.dashitech.com'
   - '+.dashiyou.com'
   - '+.dashoucloud.com'
+  - '+.dashuihua.com'
   - '+.dashuju123.com'
   - '+.dashuye.com'
   - '+.dasougu.com'
@@ -20282,6 +20286,7 @@ payload:
   - '+.dui88.com'
   - '+.duia.com'
   - '+.duiai.com'
+  - '+.duianba.com'
   - '+.duihuan123.com'
   - '+.duihuashijie.com'
   - '+.duikuang.com'
@@ -20994,7 +20999,6 @@ payload:
   - '+.ecloud.hk'
   - '+.ecmagnet.com'
   - '+.ecmoban.com'
-  - '+.ecnsea.com'
   - '+.ecnudec.com'
   - '+.ecoalchina.com'
   - '+.ecochuse.com'
@@ -21207,7 +21211,6 @@ payload:
   - '+.eetop.wang'
   - '+.eetrend.com'
   - '+.eetrust.com'
-  - '+.eeussf.com'
   - '+.eeworld.com'
   - '+.eeworm.com'
   - '+.eexiaoshuo.com'
@@ -21890,6 +21893,7 @@ payload:
   - '+.eversino.com'
   - '+.everstar.xyz'
   - '+.everstray.com'
+  - '+.everturst.com'
   - '+.evervc.com'
   - '+.everychina.com'
   - '+.everydo.com'
@@ -23231,6 +23235,7 @@ payload:
   - '+.fnjiasu.com'
   - '+.fnjsq.com'
   - '+.fnkq.com'
+  - '+.fnmobi.com'
   - '+.fnmz.com'
   - '+.fnnsh.com'
   - '+.fnrcw.com'
@@ -23251,6 +23256,7 @@ payload:
   - '+.fodang.org'
   - '+.fodian.net'
   - '+.fodizi.com'
+  - '+.fodizi.net'
   - '+.fodlab.com'
   - '+.fodoco.com'
   - '+.fokan88.com'
@@ -25365,6 +25371,7 @@ payload:
   - '+.gs265.com'
   - '+.gs307.com'
   - '+.gsadds.com'
+  - '+.gsafc.com'
   - '+.gsafcct.com'
   - '+.gsbankchina.com'
   - '+.gsbankmall.com'
@@ -25863,6 +25870,7 @@ payload:
   - '+.gxkjec.com'
   - '+.gxkjjt.com'
   - '+.gxlcms.com'
+  - '+.gxlsjt.com'
   - '+.gxlxs2008.net'
   - '+.gxmenjin.com'
   - '+.gxmlyjy.com'
@@ -27569,6 +27577,7 @@ payload:
   - '+.hfbz.com'
   - '+.hfchzyy120.com'
   - '+.hfcyh.com'
+  - '+.hfdbcy.com'
   - '+.hffund.com'
   - '+.hfgjj.com'
   - '+.hfhcl.com'
@@ -32760,6 +32769,7 @@ payload:
   - '+.jihot.com'
   - '+.jihuachina.com'
   - '+.jihuanshe.com'
+  - '+.jihulab.com'
   - '+.jihuoma.com'
   - '+.jijia.com'
   - '+.jijiagames.com'
@@ -33124,8 +33134,10 @@ payload:
   - '+.jisuxia.com'
   - '+.jisuye.com'
   - '+.jisuyilaixingpiyan.com'
+  - '+.jita.fun'
   - '+.jita.im'
   - '+.jita5.com'
+  - '+.jitadaren.com'
   - '+.jitailian.com'
   - '+.jitaqupu.com'
   - '+.jitashe.org'
@@ -34214,6 +34226,7 @@ payload:
   - '+.jwetech.com'
   - '+.jwfun.com'
   - '+.jwipc.com'
+  - '+.jwks123.com'
   - '+.jwl100.com'
   - '+.jwnote.com'
   - '+.jwshy.com'
@@ -36055,6 +36068,7 @@ payload:
   - '+.laker.me'
   - '+.lakwdian.com'
   - '+.lalala.lol'
+  - '+.lalashuwu.com'
   - '+.lalkk.com'
   - '+.lalunalove.com'
   - '+.lamabang.com'
@@ -36555,6 +36569,7 @@ payload:
   - '+.lehuadisplay.com'
   - '+.lehuipay.com'
   - '+.lehuiso.com'
+  - '+.lei001.com'
   - '+.leibei.cc'
   - '+.leida310.com'
   - '+.leidian.com'
@@ -36838,6 +36853,7 @@ payload:
   - '+.lhdyfc.com'
   - '+.lhflh.com'
   - '+.lhggjd.org'
+  - '+.lhh.la'
   - '+.lhlqw.com'
   - '+.lhm8.com'
   - '+.lhrbszb.com'
@@ -37987,6 +38003,7 @@ payload:
   - '+.loulanwang.com'
   - '+.loupan.com'
   - '+.louqun.com'
+  - '+.loushao.net'
   - '+.loushi12.com'
   - '+.lousj.com'
   - '+.lousw.com'
@@ -40634,7 +40651,6 @@ payload:
   - '+.morechinese.cc'
   - '+.moreck.com'
   - '+.morefood.com'
-  - '+.moreless.io'
   - '+.morequick.net'
   - '+.moresing.com'
   - '+.moretickets.com'
@@ -41124,7 +41140,6 @@ payload:
   - '+.mydigi.net'
   - '+.mydigit.net'
   - '+.mydiyclub.com'
-  - '+.mydll.org'
   - '+.mydnns.com'
   - '+.mydns8.com'
   - '+.mydnser.com'
@@ -42634,6 +42649,7 @@ payload:
   - '+.octwuhan.com'
   - '+.oculist.net'
   - '+.oculusss.pro'
+  - '+.odaily.news'
   - '+.odao.com'
   - '+.odict.net'
   - '+.odinichina.com'
@@ -44080,6 +44096,7 @@ payload:
   - '+.pingguodj.com'
   - '+.pingguolv.com'
   - '+.pinghe.com'
+  - '+.pinghu.tech'
   - '+.pinghui-cn.com'
   - '+.pingjiata.com'
   - '+.pingnanlearning.com'
@@ -47070,6 +47087,7 @@ payload:
   - '+.rokidcdn.com'
   - '+.rokub.com'
   - '+.roland-china.com'
+  - '+.rollingstone.net'
   - '+.rollupjs.com'
   - '+.rom100.com'
   - '+.romeng.men'
@@ -48170,6 +48188,7 @@ payload:
   - '+.seeyouyima.com'
   - '+.seezy.com'
   - '+.sefonsoft.com'
+  - '+.sefyc.com'
   - '+.segahome.com'
   - '+.segmentfault.com'
   - '+.segmentfault.net'
@@ -49274,6 +49293,7 @@ payload:
   - '+.shuaibo.wang'
   - '+.shuaigay.com'
   - '+.shuaigay.nl'
+  - '+.shuaigay6.com'
   - '+.shuaigeshe.com'
   - '+.shuaigetupian.com'
   - '+.shuaihuajun.com'
@@ -49986,7 +50006,6 @@ payload:
   - '+.skwo.net'
   - '+.sky-deep.com'
   - '+.sky-fire.com'
-  - '+.sky-planning.net'
   - '+.sky003.com'
   - '+.sky1shop.com'
   - '+.skyallhere.com'
@@ -50573,6 +50592,7 @@ payload:
   - '+.soulgame.mobi'
   - '+.souluo.net'
   - '+.soulv.com'
+  - '+.soundai.info'
   - '+.soupan.info'
   - '+.soupf.net'
   - '+.soupian.org'
@@ -51608,6 +51628,7 @@ payload:
   - '+.sydzconn.com'
   - '+.sydzdiy.com'
   - '+.syf.ink'
+  - '+.syfabiao.com'
   - '+.syfw.com'
   - '+.syg315.com'
   - '+.sygd.com'
@@ -53513,6 +53534,7 @@ payload:
   - '+.tongyou188.com'
   - '+.tongyuanos.com'
   - '+.tongyue.com'
+  - '+.tongyulala.org'
   - '+.tongzhuo100.com'
   - '+.tonitech.com'
   - '+.tonnn.com'
@@ -54670,6 +54692,7 @@ payload:
   - '+.ucziliao.com'
   - '+.uczzd.com'
   - '+.uczzd.net'
+  - '+.ud783c02.com'
   - '+.udache.com'
   - '+.udalogistic.com'
   - '+.udamall.com'
@@ -55560,6 +55583,7 @@ payload:
   - '+.vijos.org'
   - '+.vikduo.com'
   - '+.vikecn.com'
+  - '+.vikeninvest.com'
   - '+.villaday.com'
   - '+.villafrancescatti.com'
   - '+.viltd.com'
@@ -55779,6 +55803,7 @@ payload:
   - '+.volchina.com'
   - '+.volcimagex.net'
   - '+.volcsiriusbd.com'
+  - '+.volcvod.com'
   - '+.voldp.com'
   - '+.volit.com'
   - '+.volmoe.com'
@@ -56982,6 +57007,7 @@ payload:
   - '+.wenanzhe.com'
   - '+.wenbita.net'
   - '+.wenbo.cc'
+  - '+.wenbofund.com'
   - '+.wencaischool.com'
   - '+.wenchain.com'
   - '+.wenda100.net'
@@ -57579,7 +57605,6 @@ payload:
   - '+.willsemi.com'
   - '+.willsfitness.net'
   - '+.willsgym.com'
-  - '+.willsun.net'
   - '+.willwin91.com'
   - '+.wiloon.com'
   - '+.wiloop.net'
@@ -57962,6 +57987,7 @@ payload:
   - '+.woair.com'
   - '+.woaishouban.com'
   - '+.woaixiao.com'
+  - '+.woaizr.com'
   - '+.woaizuji.com'
   - '+.woaoo.net'
   - '+.wobenben.com'
@@ -62027,6 +62053,7 @@ payload:
   - '+.yezicc.com'
   - '+.yeziting.com'
   - '+.yezixigame.com'
+  - '+.yezixueyuan.com'
   - '+.yfbzb.com'
   - '+.yfcache.com'
   - '+.yfcalc.com'
@@ -63754,6 +63781,7 @@ payload:
   - '+.yueqi.com'
   - '+.yueqiquan.com'
   - '+.yueqiweixiu.com'
+  - '+.yueqiziliao.com'
   - '+.yueque.com'
   - '+.yuer.com'
   - '+.yuerbao.com'
@@ -64071,7 +64099,6 @@ payload:
   - '+.yunxinfa.com'
   - '+.yunxinshi.com'
   - '+.yunxiu.com'
-  - '+.yunxs.com'
   - '+.yunxuetang.com'
   - '+.yunxzb.com'
   - '+.yunyi-dd.com'
@@ -66395,6 +66422,7 @@ payload:
   - '+.zkl2333.com'
   - '+.zkoffcn.com'
   - '+.zkokh.com'
+  - '+.zkpk.org'
   - '+.zkread.com'
   - '+.zkroom.com'
   - '+.zksoftwaresz.com'
@@ -66768,6 +66796,7 @@ payload:
   - '+.zsvsz.com'
   - '+.zswcn.com'
   - '+.zsweai.club'
+  - '+.zswebao.shop'
   - '+.zswebao.xyz'
   - '+.zswhtl.com'
   - '+.zsxq.com'
