--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1205,7 +1205,6 @@ payload:
   - '+.12580emall.com'
   - '+.12580jnh.com'
   - '+.12580study.com'
-  - '+.12581258.com'
   - '+.125a.net'
   - '+.125edu.com'
   - '+.125job.com'
@@ -2362,7 +2361,6 @@ payload:
   - '+.237y.com'
   - '+.238.com'
   - '+.2380.in'
-  - '+.2380.ml'
   - '+.239900.com'
   - '+.23bei.com'
   - '+.23book.com'
@@ -2496,7 +2494,6 @@ payload:
   - '+.2678.com'
   - '+.267gg.com'
   - '+.268275.com'
-  - '+.26830.com'
   - '+.268363.com'
   - '+.268593.com'
   - '+.2686.com'
@@ -2521,6 +2518,7 @@ payload:
   - '+.27270.com'
   - '+.2727u.com'
   - '+.273u.com'
+  - '+.275.com'
   - '+.275st.com'
   - '+.277sy.com'
   - '+.279.com'
@@ -2561,7 +2559,6 @@ payload:
   - '+.28sn.com'
   - '+.28tui.com'
   - '+.28weixinqun.com'
-  - '+.28xl.com'
   - '+.28y.com'
   - '+.28y3.com'
   - '+.28yj.com'
@@ -3133,7 +3130,6 @@ payload:
   - '+.361mogame.com'
   - '+.361ser.com'
   - '+.361sport.com'
-  - '+.361tuan.com'
   - '+.361way.com'
   - '+.362.cc'
   - '+.363.com'
@@ -3404,7 +3400,6 @@ payload:
   - '+.3cwu.com'
   - '+.3d-stereovision.com'
   - '+.3d2000.com'
-  - '+.3d2013.com'
   - '+.3d2s.com'
   - '+.3d56.net'
   - '+.3d66.com'
@@ -3738,7 +3733,6 @@ payload:
   - '+.45r.com'
   - '+.45win.com'
   - '+.45xie.com'
-  - '+.45zw.cc'
   - '+.462546.com'
   - '+.46412.com'
   - '+.4647.org'
@@ -4900,7 +4894,6 @@ payload:
   - '+.5460.net'
   - '+.5499.com'
   - '+.54benniao.com'
-  - '+.54bk.com'
   - '+.54bt.com'
   - '+.54doctor.net'
   - '+.54doctors.net'
@@ -5271,6 +5264,8 @@ payload:
   - '+.5dplay.net'
   - '+.5ds.com'
   - '+.5duo.com'
+  - '+.5earena.com'
+  - '+.5earenacdn.com'
   - '+.5eplay.com'
   - '+.5etv.com'
   - '+.5ewin.com'
@@ -5805,7 +5800,6 @@ payload:
   - '+.6hgame.com'
   - '+.6hwan.com'
   - '+.6ih6.vip'
-  - '+.6iit.com'
   - '+.6jianshi.com'
   - '+.6jworld.com'
   - '+.6k6g.com'
@@ -5979,7 +5973,6 @@ payload:
   - '+.73zw.com'
   - '+.74.com'
   - '+.7412557.com'
-  - '+.741978.com'
   - '+.7428.net'
   - '+.744zy.com'
   - '+.7474.com'
@@ -7385,7 +7378,6 @@ payload:
   - '+.98nice.com'
   - '+.98one.com'
   - '+.98t.net'
-  - '+.98tang.com'
   - '+.98tuch.net'
   - '+.98znz.com'
   - '+.99-ss.com'
@@ -8378,7 +8370,6 @@ payload:
   - '+.aikucun.com'
   - '+.ailaba.org'
   - '+.ailbaba.me'
-  - '+.aileleba.com'
   - '+.ailete.com'
   - '+.ailewan.com'
   - '+.aili.com'
@@ -8902,7 +8893,6 @@ payload:
   - '+.alma-intl.com'
   - '+.aloha-ukulele.com'
   - '+.alonemonkey.com'
-  - '+.along.party'
   - '+.alongsky.com'
   - '+.alookbrowser.com'
   - '+.alookql.com'
@@ -9145,6 +9135,7 @@ payload:
   - '+.anren.org'
   - '+.anrenmind.com'
   - '+.anruichina.com'
+  - '+.ansbabe.com'
   - '+.ansgo.com'
   - '+.anshi7.com'
   - '+.anshouji.com'
@@ -11023,7 +11014,6 @@ payload:
   - '+.bengou.com'
   - '+.bengtie.com'
   - '+.benhu.cc'
-  - '+.benhu.com'
   - '+.benhu01.com'
   - '+.beniao.com'
   - '+.benimg.com'
@@ -11036,7 +11026,6 @@ payload:
   - '+.benseshijue.com'
   - '+.benshouji.com'
   - '+.benyh.com'
-  - '+.benyht.com'
   - '+.benyouhui.com'
   - '+.benzhb.com'
   - '+.benzhibbs.com'
@@ -11265,6 +11254,7 @@ payload:
   - '+.bidu.com'
   - '+.biduo.cc'
   - '+.biduobao.com'
+  - '+.biduowu.com'
   - '+.biduoxs.com'
   - '+.bidwhy.com'
   - '+.biebird.com'
@@ -12846,7 +12836,6 @@ payload:
   - '+.c400c.cc'
   - '+.c4d.live'
   - '+.c4datc.com'
-  - '+.c4dba.com'
   - '+.c4dcn.com'
   - '+.c4dpro.com'
   - '+.c4dsky.com'
@@ -12894,7 +12883,6 @@ payload:
   - '+.cableabc.com'
   - '+.cabling-system.com'
   - '+.cablingteam.com'
-  - '+.cabontek.com'
   - '+.cabplink.com'
   - '+.cacfo.com'
   - '+.cacg.cc'
@@ -13078,6 +13066,7 @@ payload:
   - '+.canaan-creative.com'
   - '+.canasy.com'
   - '+.cancda.net'
+  - '+.candicebeverly.com'
   - '+.candou.com'
   - '+.candylab.net'
   - '+.candypay.com'
@@ -14058,7 +14047,6 @@ payload:
   - '+.chahaotai.com'
   - '+.chaheji.com'
   - '+.chahua.org'
-  - '+.chahuilv.com'
   - '+.chahuo.com'
   - '+.chaic.com'
   - '+.chaichefang.com'
@@ -14176,6 +14164,7 @@ payload:
   - '+.chaofanaishangyu.com'
   - '+.chaofanshuma.com'
   - '+.chaofenxiang.vip'
+  - '+.chaogmp.com'
   - '+.chaoji.com'
   - '+.chaojibiaoge.com'
   - '+.chaojideng.com'
@@ -14228,6 +14217,7 @@ payload:
   - '+.chapuw.com'
   - '+.chargerlab.com'
   - '+.chargerlink.com'
+  - '+.charlottebeverly.com'
   - '+.charmelady.com'
   - '+.charmingglobe.com'
   - '+.chartboost-china.com'
@@ -14552,7 +14542,6 @@ payload:
   - '+.china-entercom.com'
   - '+.china-enterprise.com'
   - '+.china-epa.com'
-  - '+.china-epc.org'
   - '+.china-erzhong.com'
   - '+.china-experts.com'
   - '+.china-fire.com'
@@ -15360,6 +15349,7 @@ payload:
   - '+.chromedownloads.net'
   - '+.chromefor.com'
   - '+.chromeliulanqi.com'
+  - '+.chronusartcenter.org'
   - '+.chroyoo.com'
   - '+.chrstatic.com'
   - '+.chs.so'
@@ -15593,7 +15583,6 @@ payload:
   - '+.cijilu.com'
   - '+.ciku5.com'
   - '+.cili001.com'
-  - '+.cili123.pw'
   - '+.cili8.xyz'
   - '+.ciliba.buzz'
   - '+.ciliba.life'
@@ -15821,7 +15810,6 @@ payload:
   - '+.clink-ads.xyz'
   - '+.clinkworld.com'
   - '+.cliport.com'
-  - '+.cljmmm123.com'
   - '+.clled.com'
   - '+.clloz.com'
   - '+.clngaa.com'
@@ -17313,6 +17301,7 @@ payload:
   - '+.crowya.com'
   - '+.crpaas.com'
   - '+.crrcgc.cc'
+  - '+.crrjz.com'
   - '+.crs811.com'
   - '+.crsc.cc'
   - '+.crsky.com'
@@ -17657,7 +17646,6 @@ payload:
   - '+.cutefishos.com'
   - '+.cuteng.com'
   - '+.cutercounter.com'
-  - '+.cuteximi.com'
   - '+.cutout.pro'
   - '+.cutowallpaper.com'
   - '+.cutv.com'
@@ -18257,6 +18245,7 @@ payload:
   - '+.dao6.net'
   - '+.daoapp.io'
   - '+.daoapp.me'
+  - '+.daocaorenshuwu.com'
   - '+.daochu66.com'
   - '+.daocloud.io'
   - '+.daocloudapp.com'
@@ -18861,7 +18850,6 @@ payload:
   - '+.dezhongmobi.com'
   - '+.dezhoudaily.com'
   - '+.dezhouqh.com'
-  - '+.df77.com'
   - '+.df81.com'
   - '+.df9377.com'
   - '+.dfafei.com'
@@ -19425,6 +19413,7 @@ payload:
   - '+.djw51.com'
   - '+.djwcp.com'
   - '+.djwxw.com'
+  - '+.djyde.com'
   - '+.djye.com'
   - '+.djyjob.com'
   - '+.djysx.com'
@@ -19451,7 +19440,6 @@ payload:
   - '+.dl24gjb.com'
   - '+.dl2link.com'
   - '+.dl321.net'
-  - '+.dl767.net'
   - '+.dl8z.com'
   - '+.dlangchina.com'
   - '+.dlbh.net'
@@ -19753,7 +19741,6 @@ payload:
   - '+.domengle.com'
   - '+.dominoh.com'
   - '+.domobcdn.com'
-  - '+.domobnetwork.com'
   - '+.domolo.com'
   - '+.domp4.cc'
   - '+.domp4.com'
@@ -21730,7 +21717,6 @@ payload:
   - '+.esouou.com'
   - '+.esouti.com'
   - '+.esoyu.com'
-  - '+.esp-4u.com'
   - '+.espier.mobi'
   - '+.espnlol.com'
   - '+.essaystar.com'
@@ -21788,7 +21774,6 @@ payload:
   - '+.etmchina.com'
   - '+.etmoc.com'
   - '+.etmt1.com'
-  - '+.eto9.com'
   - '+.etocrm.com'
   - '+.etomlink.com'
   - '+.etongdai.com'
@@ -22724,7 +22709,6 @@ payload:
   - '+.fengji.me'
   - '+.fengji.net'
   - '+.fengjing.com'
-  - '+.fengjinshuo.com'
   - '+.fengjr.com'
   - '+.fengjunzi.com'
   - '+.fengkongcloud.com'
@@ -23570,7 +23554,6 @@ payload:
   - '+.fuka.cc'
   - '+.fukeha.com'
   - '+.fulantv.com'
-  - '+.fulevmy.com'
   - '+.fuli.la'
   - '+.fuli1024.com'
   - '+.fuli404.net'
@@ -24330,6 +24313,7 @@ payload:
   - '+.gdzhlh.com'
   - '+.gdzhongshan.com'
   - '+.gdzp.org'
+  - '+.gdzrlj.com'
   - '+.gdzs2018.cc'
   - '+.gdzs2018.vip'
   - '+.gdzsxx.com'
@@ -26333,7 +26317,6 @@ payload:
   - '+.haitoujia.com'
   - '+.haitudy.com'
   - '+.haituie.com'
-  - '+.haitum.com'
   - '+.haituncun.com'
   - '+.haitundr.com'
   - '+.haitunshenghuo.com'
@@ -26567,6 +26550,7 @@ payload:
   - '+.haochangyou.com'
   - '+.haocheedai.com'
   - '+.haochi123.com'
+  - '+.haochijixie.com'
   - '+.haochu.com'
   - '+.haodaibao.com'
   - '+.haodanku.com'
@@ -26631,7 +26615,6 @@ payload:
   - '+.haojiaolian.com'
   - '+.haojiaolian.org'
   - '+.haojing.org'
-  - '+.haoju55.com'
   - '+.haojue.com'
   - '+.haojue163.com'
   - '+.haokan123.com'
@@ -28006,7 +27989,6 @@ payload:
   - '+.hm86.com'
   - '+.hmecw.com'
   - '+.hmgj.com'
-  - '+.hmh3.com'
   - '+.hminvestment.com'
   - '+.hmlan.com'
   - '+.hmldds.com'
@@ -28038,7 +28020,6 @@ payload:
   - '+.hnair.net'
   - '+.hnaiya.com'
   - '+.hnangel.com'
-  - '+.hnaorui.com'
   - '+.hnapay.com'
   - '+.hnayg.com'
   - '+.hnbaili.net'
@@ -28721,7 +28702,6 @@ payload:
   - '+.htt5.com'
   - '+.httingshu.com'
   - '+.httpcn.com'
-  - '+.httprunner.org'
   - '+.hturl.cc'
   - '+.htuwenming.com'
   - '+.htv009.com'
@@ -29555,7 +29535,6 @@ payload:
   - '+.hxytw.com'
   - '+.hxyxsj.com'
   - '+.hxzdhn.com'
-  - '+.hxzxg.com'
   - '+.hy-cgp.com'
   - '+.hy-la.com'
   - '+.hy-zr.com'
@@ -29631,7 +29610,6 @@ payload:
   - '+.hyx1314.xyz'
   - '+.hyxrzs.com'
   - '+.hyyf.net'
-  - '+.hyyic.com'
   - '+.hyyoa.com'
   - '+.hyyyny.com'
   - '+.hyz86.com'
@@ -30621,7 +30599,6 @@ payload:
   - '+.ijnqc.com'
   - '+.ijogame.com'
   - '+.ijq.tv'
-  - '+.ijrou.com'
   - '+.ijsp.net'
   - '+.ijuanshi.com'
   - '+.ijuer.com'
@@ -31793,7 +31770,6 @@ payload:
   - '+.iwpai.com'
   - '+.iwshang.com'
   - '+.iwucha.com'
-  - '+.iww.me'
   - '+.iwwwwwi.com'
   - '+.iwxapi.com'
   - '+.iwyv.com'
@@ -32068,6 +32044,7 @@ payload:
   - '+.jcloud-cdn.com'
   - '+.jcloud.com'
   - '+.jcloudcache.com'
+  - '+.jcloudcache.net'
   - '+.jcloudcs.com'
   - '+.jcloudec.com'
   - '+.jcloudedge.com'
@@ -32428,6 +32405,7 @@ payload:
   - '+.jianbing.com'
   - '+.jiancai.com'
   - '+.jianchacha.com'
+  - '+.jianchajingmk.net'
   - '+.jianchihu.net'
   - '+.jiandaima.com'
   - '+.jiandan.net'
@@ -33295,7 +33273,6 @@ payload:
   - '+.jjplane.com'
   - '+.jjppt.com'
   - '+.jjqj.net'
-  - '+.jjrjd.com'
   - '+.jjsedu.org'
   - '+.jjshang.com'
   - '+.jjsip.com'
@@ -33444,7 +33421,6 @@ payload:
   - '+.jndssd.com'
   - '+.jndwyy.com'
   - '+.jnesc.com'
-  - '+.jnhcjzlw.com'
   - '+.jnhouse.com'
   - '+.jnjbrother.com'
   - '+.jnjj.com'
@@ -33662,6 +33638,7 @@ payload:
   - '+.jqgc.com'
   - '+.jqgcw.com'
   - '+.jqhtml.com'
+  - '+.jqingdashi.xyz'
   - '+.jqpress.com'
   - '+.jqr.com'
   - '+.jqr5.com'
@@ -38270,7 +38247,6 @@ payload:
   - '+.luobowin8.com'
   - '+.luoboxia.com'
   - '+.luochen.com'
-  - '+.luocheng.org'
   - '+.luochenyl.com'
   - '+.luochenzhimu.com'
   - '+.luochunhui.com'
@@ -38438,6 +38414,7 @@ payload:
   - '+.lwfengji.net'
   - '+.lwfjmj.com'
   - '+.lwgsw.com'
+  - '+.lwguitar.com'
   - '+.lwhouse.com'
   - '+.lwinl.com'
   - '+.lwinst.com'
@@ -38757,7 +38734,6 @@ payload:
   - '+.maianhao.com'
   - '+.maibasa.com'
   - '+.maibw.net'
-  - '+.maicdn.com'
   - '+.maicha365.com'
   - '+.maichawang.com'
   - '+.maiche.com'
@@ -38848,7 +38824,6 @@ payload:
   - '+.maiymai.com'
   - '+.maizhi.com'
   - '+.maiziedu.com'
-  - '+.maizijf.com'
   - '+.maizim.com'
   - '+.maizipo.com'
   - '+.maizitime.com'
@@ -39034,7 +39009,6 @@ payload:
   - '+.maomaoxue.com'
   - '+.maopuyouxi.com'
   - '+.maoqitian.com'
-  - '+.maoqiuapp.com'
   - '+.maoshimei.com'
   - '+.maotaizuichen.com'
   - '+.maotuying.com'
@@ -39512,7 +39486,6 @@ payload:
   - '+.meitegou.com'
   - '+.meitianhui.com'
   - '+.meitibijia.com'
-  - '+.meitironghe.org'
   - '+.meitu.com'
   - '+.meitu.store'
   - '+.meituan.com'
@@ -41089,7 +41062,6 @@ payload:
   - '+.mycos.com'
   - '+.mycos.net'
   - '+.mycos.org'
-  - '+.mycoser.com'
   - '+.mycospxk.com'
   - '+.mycoss.com'
   - '+.mycoss.net'
@@ -41202,7 +41174,6 @@ payload:
   - '+.myoschain.com'
   - '+.myottad.com'
   - '+.myouth.net'
-  - '+.myp2pcam.com'
   - '+.myp2pch.net'
   - '+.mypal.wang'
   - '+.mypcera.com'
@@ -41486,6 +41457,7 @@ payload:
   - '+.nayao.com'
   - '+.nayatec.com'
   - '+.nayei.com'
+  - '+.nazo.fun'
   - '+.nb-medicalsystem.com'
   - '+.nb301.xyz'
   - '+.nb591.com'
@@ -42246,6 +42218,7 @@ payload:
   - '+.nooshen.com'
   - '+.nopis.org'
   - '+.noposion.com'
+  - '+.nopph.website'
   - '+.noq.cc'
   - '+.nor-land.com'
   - '+.nordfxs.com'
@@ -42345,7 +42318,6 @@ payload:
   - '+.nsini.com'
   - '+.nsisfans.com'
   - '+.nsnodes.com'
-  - '+.nsns8.com'
   - '+.nsoad.com'
   - '+.nsoft.vip'
   - '+.nsrfww.com'
@@ -43392,7 +43364,6 @@ payload:
   - '+.panchuang.net'
   - '+.pancishe.com'
   - '+.panda-home.com'
-  - '+.panda.tv'
   - '+.panda321.com'
   - '+.panda98.com'
   - '+.pandadastudio.com'
@@ -43967,7 +43938,6 @@ payload:
   - '+.piaoquantv.com'
   - '+.piaoshen.com'
   - '+.piaotian.org'
-  - '+.piaotian.us'
   - '+.piaotian5.com'
   - '+.piaotongyun.com'
   - '+.piaowutong.cc'
@@ -45354,7 +45324,6 @@ payload:
   - '+.qijuib.com'
   - '+.qik339.com'
   - '+.qikan.com'
-  - '+.qikan123.com'
   - '+.qikanol.com'
   - '+.qikanw.com'
   - '+.qikegu.com'
@@ -45844,7 +45813,6 @@ payload:
   - '+.qq933.com'
   - '+.qqahz.net'
   - '+.qqaiqin.com'
-  - '+.qqaishu.com'
   - '+.qqan.com'
   - '+.qqapk.com'
   - '+.qqba.com'
@@ -45952,7 +45920,6 @@ payload:
   - '+.qqwx8.xyz'
   - '+.qqwxmail.com'
   - '+.qqwys.net'
-  - '+.qqxifan.com'
   - '+.qqxmail.com'
   - '+.qqxs.cc'
   - '+.qqxs.la'
@@ -46551,7 +46518,6 @@ payload:
   - '+.ratuo.com'
   - '+.ray-joy.com'
   - '+.ray8.cc'
-  - '+.raychase.net'
   - '+.raychien.site'
   - '+.raycom-inv.com'
   - '+.raycuslaser.com'
@@ -47023,6 +46989,7 @@ payload:
   - '+.rnfengwo.com'
   - '+.rngtest.com'
   - '+.roadjava.com'
+  - '+.roadlady.com'
   - '+.roadoor.com'
   - '+.roadsigngroup.com'
   - '+.robam.com'
@@ -47547,7 +47514,6 @@ payload:
   - '+.samzhe.com'
   - '+.san-health.net'
   - '+.san-sheng.net'
-  - '+.sanban18.com'
   - '+.sancanal.com'
   - '+.sanctpalace.com'
   - '+.sancunrenjian.org'
@@ -47855,7 +47821,6 @@ payload:
   - '+.scufida.com'
   - '+.scujj.com'
   - '+.scusec.org'
-  - '+.scutcm.com'
   - '+.scutde.net'
   - '+.scutef.org'
   - '+.scutsee.com'
@@ -47910,7 +47875,6 @@ payload:
   - '+.sdchina.com'
   - '+.sdchn.com'
   - '+.sdcqjy.com'
-  - '+.sdctech.net'
   - '+.sdcydl.com'
   - '+.sdd17.com'
   - '+.sddagongrubber.com'
@@ -48369,7 +48333,6 @@ payload:
   - '+.sh-arpm.com'
   - '+.sh-aurora.net'
   - '+.sh-baolai.com'
-  - '+.sh-cyclerace.org'
   - '+.sh-deem.com'
   - '+.sh-dent.com'
   - '+.sh-dls.com'
@@ -48546,7 +48509,6 @@ payload:
   - '+.shangzhang.com'
   - '+.shangzhibo.tv'
   - '+.shanhaizhanji.com'
-  - '+.shanhe.cc'
   - '+.shanhu99.com'
   - '+.shanhuojiaoyi.com'
   - '+.shanhuu.com'
@@ -48666,7 +48628,6 @@ payload:
   - '+.shdsd.com'
   - '+.shdzby168.com'
   - '+.shdzfp.com'
-  - '+.she.vc'
   - '+.shebao.net'
   - '+.shebao5.com'
   - '+.shebao520.com'
@@ -50632,6 +50593,7 @@ payload:
   - '+.sp588.cc'
   - '+.sp588.net'
   - '+.sp84.com'
+  - '+.sp888.net'
   - '+.sp910.com'
   - '+.space1688.com'
   - '+.spacechina.com'
@@ -50676,7 +50638,6 @@ payload:
   - '+.spforum.net'
   - '+.spgnux.com'
   - '+.sphinxrating.com'
-  - '+.sphinxsearch.org'
   - '+.spibj.com'
   - '+.spiiker.com'
   - '+.spin-view.com'
@@ -52675,6 +52636,7 @@ payload:
   - '+.terransforce.com'
   - '+.teruide.net'
   - '+.tese5.com'
+  - '+.tesexiu.com'
   - '+.teshenqi.com'
   - '+.tesolsh.com'
   - '+.tesoon.com'
@@ -53930,7 +53892,6 @@ payload:
   - '+.tt56w.com'
   - '+.tt65.org'
   - '+.tt83.xyz'
-  - '+.tt86.com'
   - '+.tt96596.com'
   - '+.tt98.com'
   - '+.ttaidu.com'
@@ -54059,7 +54020,6 @@ payload:
   - '+.tucaojie.com'
   - '+.tuchong.com'
   - '+.tuchong.net'
-  - '+.tuchuang001.com'
   - '+.tuchuanhuwai.com'
   - '+.tucia.net'
   - '+.tucoo.com'
@@ -54509,7 +54469,6 @@ payload:
   - '+.tzkameng.com'
   - '+.tzlib.net'
   - '+.tzm66.com'
-  - '+.tzmauto.com'
   - '+.tzres.com'
   - '+.tzrl.com'
   - '+.tzsnw.com'
@@ -57939,6 +57898,7 @@ payload:
   - '+.woaidu.org'
   - '+.woaifanyi.com'
   - '+.woaihuahua.com'
+  - '+.woaijiba.com'
   - '+.woailuo.com'
   - '+.woaipj.com'
   - '+.woaipu.com'
@@ -59274,6 +59234,7 @@ payload:
   - '+.xhsfw.com'
   - '+.xhslink.com'
   - '+.xhspx.com'
+  - '+.xhswglobal.com'
   - '+.xhsyww.com'
   - '+.xht.com.hk'
   - '+.xhtd291.com'
@@ -59873,7 +59834,6 @@ payload:
   - '+.xiezefan.me'
   - '+.xiezewen.com'
   - '+.xiezhenxian.net'
-  - '+.xiezhenye.com'
   - '+.xiezhicehua.com'
   - '+.xieziqiu.net'
   - '+.xiezixiansheng.com'
@@ -61724,6 +61684,7 @@ payload:
   - '+.yaxige.com'
   - '+.yaxinde.com'
   - '+.yaxuntuhang.com'
+  - '+.yaya.love'
   - '+.yayigou.net'
   - '+.yayihouse.com'
   - '+.yaypool.com'
@@ -62402,6 +62363,7 @@ payload:
   - '+.yingshiyou.com'
   - '+.yingsoo.com'
   - '+.yingsun.net'
+  - '+.yingsx.com'
   - '+.yingtai.com'
   - '+.yingtaoai.com'
   - '+.yingtaosiyue.com'
@@ -62563,6 +62525,7 @@ payload:
   - '+.yishixue.com'
   - '+.yishu.com'
   - '+.yishu168.com'
+  - '+.yishu1688.net'
   - '+.yishujie.com'
   - '+.yishuliuxue.com'
   - '+.yishun.net'
@@ -64221,7 +64184,6 @@ payload:
   - '+.yxcity.com'
   - '+.yxcshui.com'
   - '+.yxcuv.com'
-  - '+.yxd1969.com'
   - '+.yxdaily.com'
   - '+.yxdd.com'
   - '+.yxdgc.com'
@@ -66248,6 +66210,7 @@ payload:
   - '+.zjipc.com'
   - '+.zjj17u.com'
   - '+.zjj21.com'
+  - '+.zjjbtl.com'
   - '+.zjjd.org'
   - '+.zjjdamuzhi.com'
   - '+.zjjgcyz.com'
@@ -66299,6 +66262,7 @@ payload:
   - '+.zjsaisi.com'
   - '+.zjscdb.com'
   - '+.zjscs.com'
+  - '+.zjshuo.com'
   - '+.zjsight.com'
   - '+.zjsr.com'
   - '+.zjstv.com'
@@ -66388,7 +66352,6 @@ payload:
   - '+.zkx.cc'
   - '+.zkxblog.com'
   - '+.zkxlkj.net'
-  - '+.zkxsw.com'
   - '+.zkxww.com'
   - '+.zkydib.com'
   - '+.zkyouxi.com'
@@ -66861,7 +66824,6 @@ payload:
   - '+.zuimeix.com'
   - '+.zuimoban.com'
   - '+.zuiniuwang.com'
-  - '+.zuiqiangnixi.com'
   - '+.zuiqiangyingyu.net'
   - '+.zuirede.com'
   - '+.zuishidai.com'
@@ -67232,6 +67194,7 @@ payload:
   - '+.zzstep.com'
   - '+.zzt9.com'
   - '+.zztline.com'
+  - '+.zztongyun.com'
   - '+.zztoutiao.net'
   - '+.zztxkj.com'
   - '+.zzvips.com'
