--- a/directbak.yaml
+++ b/directbak.yaml
@@ -98,7 +98,6 @@ payload:
   - '+.0135135.com'
   - '+.01368.com'
   - '+.01368u.com'
-  - '+.013767.com'
   - '+.0138.com'
   - '+.014.cc'
   - '+.014999k.com'
@@ -127,7 +126,6 @@ payload:
   - '+.01w.com'
   - '+.01water.com'
   - '+.01wb.com'
-  - '+.01wed.com'
   - '+.01yo.com'
   - '+.01yun.com'
   - '+.01zhuanche.com'
@@ -698,7 +696,6 @@ payload:
   - '+.09ge.com'
   - '+.09rw.com'
   - '+.09shijue.com'
-  - '+.09t55.com'
   - '+.0bug.org'
   - '+.0car0.com'
   - '+.0ctrl.com'
@@ -741,8 +738,6 @@ payload:
   - '+.1-yuan.net'
   - '+.1.cc'
   - '+.1.cm'
-  - '+.1.cms.s81c.com'
-  - '+.1.www.s81c.com'
   - '+.100-tong.com'
   - '+.100.com'
   - '+.100.me'
@@ -2401,7 +2396,6 @@ payload:
   - '+.2481e.com'
   - '+.248xyx.com'
   - '+.249m.com'
-  - '+.24beta.com'
   - '+.24haowan.com'
   - '+.24hmb.com'
   - '+.24hxf.net'
@@ -2566,6 +2560,7 @@ payload:
   - '+.293.net'
   - '+.29365.bet'
   - '+.2952.cc'
+  - '+.29592.net'
   - '+.29663.com'
   - '+.296u.com'
   - '+.29797.com'
@@ -4791,7 +4786,6 @@ payload:
   - '+.52tt.com'
   - '+.52udl.com'
   - '+.52ugame.xyz'
-  - '+.52unicode.com'
   - '+.52uyn.com'
   - '+.52vr.com'
   - '+.52vrdy.com'
@@ -9934,6 +9928,7 @@ payload:
   - '+.awuming.com'
   - '+.awx1.com'
   - '+.ax2nc4.ren'
+  - '+.ax61.com'
   - '+.ax630.com'
   - '+.axatp.com'
   - '+.axbsec.com'
@@ -10213,7 +10208,6 @@ payload:
   - '+.baijiacloud.com'
   - '+.baijiahulian.com'
   - '+.baijiasheping.com'
-  - '+.baijiasoft.com'
   - '+.baijiayun.com'
   - '+.baijiegroup.com'
   - '+.baijiekj.com'
@@ -13201,7 +13195,6 @@ payload:
   - '+.catall.com'
   - '+.catalog-tj.com'
   - '+.catfish-cms.com'
-  - '+.catfun.tv'
   - '+.catguo.com'
   - '+.cathayagroup.com'
   - '+.cathayfund.com'
@@ -13602,6 +13595,7 @@ payload:
   - '+.cdn-ng.net'
   - '+.cdn-speed.com'
   - '+.cdn-static.farfetch-contents.com'
+  - '+.cdn-uc.cc'
   - '+.cdn-v.com'
   - '+.cdn.fun'
   - '+.cdn.marketplaceimages.windowsphone.com'
@@ -17990,6 +17984,7 @@ payload:
   - '+.dagongcredit.com'
   - '+.dagongnet.com'
   - '+.daguangnews.com'
+  - '+.dagufood.com'
   - '+.daguu.com'
   - '+.daguzhe.com'
   - '+.dahainan.com'
@@ -18169,6 +18164,7 @@ payload:
   - '+.dangbeiprojector.com'
   - '+.dangcdn.com'
   - '+.dangdang.com'
+  - '+.dangguai.com'
   - '+.danghongyun.com'
   - '+.danghuan.com'
   - '+.dangjian.com'
@@ -19070,7 +19066,6 @@ payload:
   - '+.dianxin.net'
   - '+.dianxinnews.com'
   - '+.dianxinos.com'
-  - '+.dianyingjie.com'
   - '+.dianyingshow.com'
   - '+.dianyingwenxue.com'
   - '+.dianyinjidiao.com'
@@ -20935,6 +20930,7 @@ payload:
   - '+.ecitic.com'
   - '+.ecjson.com'
   - '+.eckjzx.com'
+  - '+.eckwai.com'
   - '+.ecloud.hk'
   - '+.ecmagnet.com'
   - '+.ecmoban.com'
@@ -21315,7 +21311,6 @@ payload:
   - '+.ekclubinternational.com'
   - '+.ekesoo.com'
   - '+.eketong.com'
-  - '+.eku.cc'
   - '+.ekuaibao.com'
   - '+.elabinfo.com'
   - '+.elanso.com'
@@ -22710,6 +22705,7 @@ payload:
   - '+.fengread.com'
   - '+.fengshangweekly.com'
   - '+.fengshui22.com'
+  - '+.fengshui86.com'
   - '+.fengsung.com'
   - '+.fengtai.tv'
   - '+.fengtalk.com'
@@ -24549,6 +24545,7 @@ payload:
   - '+.ggqx.com'
   - '+.ggsafe.com'
   - '+.ggsq.cc'
+  - '+.ggt1024.com'
   - '+.ggwan.com'
   - '+.ggweb.net'
   - '+.ggxt.net'
@@ -24828,6 +24825,7 @@ payload:
   - '+.gmt-china.org'
   - '+.gmtv.cc'
   - '+.gmugmu.com'
+  - '+.gmwiki.com'
   - '+.gmwtp.com'
   - '+.gmwuf.com'
   - '+.gmyl.com'
@@ -25935,7 +25933,6 @@ payload:
   - '+.gzhuake.cc'
   - '+.gzhxpw.com'
   - '+.gzhzcj.com'
-  - '+.gzhzgwyw.com'
   - '+.gzidc.com'
   - '+.gzif.net'
   - '+.gzittc.net'
@@ -27561,7 +27558,6 @@ payload:
   - '+.hgbang.com'
   - '+.hgcyh.com'
   - '+.hgdgcxy.com'
-  - '+.hgdjw.net'
   - '+.hgfdcscxx.com'
   - '+.hgfdrf.com'
   - '+.hghhh.com'
@@ -28074,6 +28070,7 @@ payload:
   - '+.hnpfw.com'
   - '+.hnpolice.com'
   - '+.hnpost.com'
+  - '+.hnqbb.com'
   - '+.hnqfseed.com'
   - '+.hnquxing.com'
   - '+.hnquyou.com'
@@ -30934,7 +30931,6 @@ payload:
   - '+.infertilitybridge.com'
   - '+.infineon-autoeco.com'
   - '+.infinitescript.com'
-  - '+.infinityarts.net'
   - '+.infinitynewtab.com'
   - '+.info.cc'
   - '+.info10.com'
@@ -31553,7 +31549,6 @@ payload:
   - '+.itluantan.com'
   - '+.itmanbu.com'
   - '+.itmind.net'
-  - '+.itminus.com'
   - '+.itmo.com'
   - '+.itmoocs.com'
   - '+.itmop.com'
@@ -32966,7 +32961,6 @@ payload:
   - '+.jinxuliang.com'
   - '+.jinxun.cc'
   - '+.jinyaco.com'
-  - '+.jinyi2008.com'
   - '+.jinyindao.com'
   - '+.jinying.com'
   - '+.jinyongwang.com'
@@ -33687,7 +33681,6 @@ payload:
   - '+.jscqt.com'
   - '+.jscssimg.com'
   - '+.jscts.com'
-  - '+.jsczyjg.com'
   - '+.jsd.cc'
   - '+.jsdaima.com'
   - '+.jsddlzz.com'
@@ -37820,6 +37813,7 @@ payload:
   - '+.longtuohy.com'
   - '+.longu.com'
   - '+.longwang.cc'
+  - '+.longwanshijia.com'
   - '+.longwenedu.com'
   - '+.longwiki.org'
   - '+.longwin.org'
@@ -37990,7 +37984,6 @@ payload:
   - '+.lqbj66.com'
   - '+.lqbld.com'
   - '+.lqbyj.com'
-  - '+.lqgc.net'
   - '+.lqgcb.com'
   - '+.lqgrdj.com'
   - '+.lqhigo.com'
@@ -38212,6 +38205,7 @@ payload:
   - '+.luochenyl.com'
   - '+.luochenzhimu.com'
   - '+.luochunhui.com'
+  - '+.luocs.cc'
   - '+.luodaoyi.com'
   - '+.luodian.com'
   - '+.luodw.cc'
@@ -39532,6 +39526,7 @@ payload:
   - '+.mengma021.com'
   - '+.mengniang.tv'
   - '+.mengniu99.com'
+  - '+.mengqianxun.net'
   - '+.mengqiuju.com'
   - '+.mengsang.com'
   - '+.mengshihm.com'
@@ -42764,6 +42759,7 @@ payload:
   - '+.onehome.me'
   - '+.onein.com'
   - '+.oneinstack.com'
+  - '+.oneiwff.com'
   - '+.onekey.cc'
   - '+.onekeyghost.com'
   - '+.onekeyrom.com'
@@ -42941,7 +42937,6 @@ payload:
   - '+.opxincai.com'
   - '+.opython.com'
   - '+.opzoon.com'
-  - '+.oq68.com'
   - '+.oq78.com'
   - '+.oqss.com'
   - '+.or-sun.com'
@@ -43000,7 +42995,6 @@ payload:
   - '+.orz.moe'
   - '+.orz123.com'
   - '+.orz520.com'
-  - '+.orzbook.com'
   - '+.orzice.com'
   - '+.orzjoy.com'
   - '+.os-easy.com'
@@ -43909,6 +43903,7 @@ payload:
   - '+.pic138.com'
   - '+.pic16.com'
   - '+.pic21.com'
+  - '+.pic3733.com'
   - '+.pic720.com'
   - '+.picatown.com'
   - '+.picc.com'
@@ -44092,7 +44087,6 @@ payload:
   - '+.pjhome.net'
   - '+.pjhubs.com'
   - '+.pjialin.com'
-  - '+.pjjs2.com'
   - '+.pjjyzx.com'
   - '+.pjnoi.com'
   - '+.pjob.net'
@@ -44636,6 +44630,7 @@ payload:
   - '+.pujiahh.com'
   - '+.pukinte.com'
   - '+.pulisi.com'
+  - '+.pullwave.com'
   - '+.pullword.com'
   - '+.pullywood.com'
   - '+.pulsigame.com'
@@ -48295,6 +48290,7 @@ payload:
   - '+.sh-investment.net'
   - '+.sh-ryjx.com'
   - '+.sh-service.com'
+  - '+.sh-sfc.com'
   - '+.sh-surface.com'
   - '+.sh-tangfeng.com'
   - '+.sh-warwick.com'
@@ -50389,6 +50385,7 @@ payload:
   - '+.sooyuu.com'
   - '+.soozhu.com'
   - '+.sopaimai.com'
+  - '+.sopandas.com'
   - '+.sopanxia.com'
   - '+.soperson.com'
   - '+.soppt.com'
@@ -50985,7 +50982,6 @@ payload:
   - '+.subo40.com'
   - '+.subom.net'
   - '+.subond.com'
-  - '+.suboyouku.com'
   - '+.subuy.com'
   - '+.sucai.com'
   - '+.sucaibar.com'
@@ -51257,6 +51253,7 @@ payload:
   - '+.suremotoo.site'
   - '+.surface-ser.com'
   - '+.surmon.me'
+  - '+.surprising.studio'
   - '+.sursen.com'
   - '+.sursenelec.com'
   - '+.sursung.com'
@@ -52906,6 +52903,7 @@ payload:
   - '+.tianyanqifu.com'
   - '+.tianyant.com'
   - '+.tianyaruanwen.com'
+  - '+.tianyashuku.com'
   - '+.tianyaui.com'
   - '+.tianyecollege.com'
   - '+.tianyi1368.com'
@@ -53330,6 +53328,7 @@ payload:
   - '+.tom163.net'
   - '+.tom61.com'
   - '+.tomap.me'
+  - '+.tomatogames.com'
   - '+.tomatolei.com'
   - '+.tomax.xyz'
   - '+.tomczhen.com'
@@ -53909,6 +53908,8 @@ payload:
   - '+.ttwx.com'
   - '+.ttxn.com'
   - '+.ttxs123.net'
+  - '+.ttxs234.com'
+  - '+.ttxs789.com'
   - '+.ttxsapp.com'
   - '+.ttxuanpai.com'
   - '+.ttxunta.com'
@@ -57483,7 +57484,6 @@ payload:
   - '+.win10world.com'
   - '+.win10ww.com'
   - '+.win10xitong.com'
-  - '+.win10zjb.com'
   - '+.win10zyb.com'
   - '+.win2007.com'
   - '+.win4000.com'
@@ -57706,6 +57706,7 @@ payload:
   - '+.wkread.com'
   - '+.wksc.com'
   - '+.wkshipark.com'
+  - '+.wkyaoye.com'
   - '+.wkzf.com'
   - '+.wkzuche.com'
   - '+.wl.dlservice.microsoft.com'
@@ -58151,7 +58152,6 @@ payload:
   - '+.ws.ksmobile.net'
   - '+.wsaf.net'
   - '+.wsbuluo.com'
-  - '+.wsbz008.com'
   - '+.wsc-expo.com'
   - '+.wscdns.com'
   - '+.wscdns.info'
@@ -59407,6 +59407,7 @@ payload:
   - '+.xiaodutv.com'
   - '+.xiaody.com'
   - '+.xiaoe-tech.com'
+  - '+.xiaoe-tools.com'
   - '+.xiaoeknow.com'
   - '+.xiaoenai.com'
   - '+.xiaoeryi.com'
@@ -59957,6 +59958,7 @@ payload:
   - '+.xingtangzp.com'
   - '+.xingtouzi.com'
   - '+.xingtu.com'
+  - '+.xinguad.com'
   - '+.xingumin.net'
   - '+.xingxing.com'
   - '+.xingxingmeiyu.com'
@@ -60058,6 +60060,7 @@ payload:
   - '+.xinnianhua.com'
   - '+.xinnong.com'
   - '+.xinnuoqian.com'
+  - '+.xinorngyk.com'
   - '+.xinouhk.com'
   - '+.xinpianchang.com'
   - '+.xinpianyugao.com'
@@ -60580,7 +60583,6 @@ payload:
   - '+.xn--nyw032beqlm2f.com'
   - '+.xn--nyw032beqlm2f.net'
   - '+.xn--q20av2y36ac54a.com'
-  - '+.xn--rhq0kz4zzjc7w9a66k.com'
   - '+.xn--rss99n.com'
   - '+.xn--s4t325g.com'
   - '+.xn--w9qy23cc6adz7d.net'
@@ -61716,6 +61718,7 @@ payload:
   - '+.ycsystem.com'
   - '+.yct-tec.com'
   - '+.ycty.org'
+  - '+.ycty119.com'
   - '+.ycwalker.com'
   - '+.ycwanju.com'
   - '+.ycwb.com'
@@ -62133,7 +62136,6 @@ payload:
   - '+.yihaikerry.net'
   - '+.yihangen.com'
   - '+.yihao01.com'
-  - '+.yihaobc.com'
   - '+.yihaodian.com'
   - '+.yihaodianimg.com'
   - '+.yihaoduozhongduan.com'
@@ -62371,7 +62373,6 @@ payload:
   - '+.yintop.com'
   - '+.yinuoedu.net'
   - '+.yinuosy.com'
-  - '+.yinvmh.com'
   - '+.yinxi.net'
   - '+.yinxiang.com'
   - '+.yinxianggame.com'
@@ -63064,7 +63065,6 @@ payload:
   - '+.youkua.net'
   - '+.youkudou.com'
   - '+.youkudown.com'
-  - '+.youkutv.cc'
   - '+.youlanw.com'
   - '+.youle360.com'
   - '+.youle55.com'
@@ -63866,7 +63866,6 @@ payload:
   - '+.yunkongpingban.com'
   - '+.yunlebao.com'
   - '+.yunlianip.com'
-  - '+.yunlianvps.com'
   - '+.yunlibeauty.com'
   - '+.yunlie.net'
   - '+.yunlietou.com'
@@ -65134,7 +65133,6 @@ payload:
   - '+.zhenaoyaoye.com'
   - '+.zhenbi.com'
   - '+.zhenbizi.com'
-  - '+.zhenchenglong.com'
   - '+.zhending-chicken.com'
   - '+.zhenfang.me'
   - '+.zhenfund.com'
@@ -65226,6 +65224,7 @@ payload:
   - '+.zhguoguo.com'
   - '+.zhh.me'
   - '+.zhhainiao.com'
+  - '+.zhhbqg.com'
   - '+.zhhrm.com'
   - '+.zhhs-china.com'
   - '+.zhhtxt.com'
@@ -65844,7 +65843,6 @@ payload:
   - '+.zhuozhengsoft.com'
   - '+.zhuozhoufangchan.com'
   - '+.zhuozhuogame.com'
-  - '+.zhupadns.com'
   - '+.zhuqinit.com'
   - '+.zhuqiyang.com'
   - '+.zhuque.me'
@@ -66970,10 +66968,10 @@ payload:
   - '+.zxzlf.com'
   - '+.zxzyl.com'
   - '+.zxzyy.com'
-  - '+.zy91.com'
   - '+.zy-cam.com'
   - '+.zy2071.com'
   - '+.zy728.com'
+  - '+.zy91.com'
   - '+.zyan.cc'
   - '+.zyautoe.com'
   - '+.zybang.com'
